--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="#">Nosotros</a></li>
           <li><a href="#">Instagram</a></li>
           <li><a href="#"> Whatsapp</a></li>
-          <li><a href="#">Ayuda</a></li>
+          <li><a href="#">tienda</a></li>
         </ul>
       </nav>
     </header>
