--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
     <title>Ropa</title>
   </head>
   <body>
@@ -47,6 +48,51 @@
         a $15.000 el envio es sin cargo. No dudes en contactanos y realizar tu
         pedido. En nuestra tienda Online podran ver todas nuestras prendas.
       </section>
+      <section id="info">
+        <h2>Algunas de nuestras prendas</h2>
+        <div class="prendas-info-container">
+          <div class="info-card">
+            <img src="img/pant cargo.webp" alt="pantcargo" />
+            <h3>Pantalon Cargo Negro</h3>
+            <p>
+              Es recto, suelto y las costuras visibles en blanco le dan el toque
+            </p>
+          </div>
+          <div class="info-card">
+            <img src="img/buzo overside.webp" alt="buzo overside" />
+            <h3>Buzo Overside</h3>
+            <p>Buzo con capucha de calce oversize</p>
+          </div>
+          <div class="info-card">
+            <img src="img/top.webp" alt="top mujer" />
+            <h3>Top Engomado</h3>
+            <p>Top Engomado Liviano Costuras</p>
+          </div>
+        </div>
+        <div></div>
+      </section>
+      <footer id="contacto">
+        <div class="container-footer">
+          <div class="footer-row">
+            <div class="footer-links">
+              <h4>Cordoba, Argentina</h4>
+              <ul>
+                <li>Av. Puerto Rico 25</li>
+                <li>casaropa@gmail.com</li>
+                <li>351-1234287</li>
+              </ul>
+            </div>
+            <div class="footer-links">
+              <div class="social-link">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
